<project xmlns="http://maven.apache.org/POM/4.0.0" 
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
    http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.1.0</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>

  <groupId>com.github.shibadog.azgon</groupId>
  <artifactId>game</artifactId>
  <version>0.0.1-SNAPSHOT</version>

  <properties>
    <spring-boot.run.jvmArguments>
      --module-path ${env.PATH_TO_FX}
      --add-modules javafx.controls,javafx.fxml
      -Djava.library.path=${env.PATH_TO_FX}
      -Dnet.java.games.input.librarypath=${project.basedir}/target/natives
    </spring-boot.run.jvmArguments>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>17</java.version>

    <javafx.version>17.0.7</javafx.version>
    <jinput.version>2.0.9</jinput.version>

    <nativedependencies-maven-plugin.version>1.0.6</nativedependencies-maven-plugin.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>

    <!-- openjfx -->
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>${javafx.version}</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>${javafx.version}</version>
    </dependency>

    <dependency>
      <groupId>net.java.jinput</groupId>
      <artifactId>jinput</artifactId>
      <version>${jinput.version}</version>
    </dependency>
    <dependency>
        <groupId>net.java.jinput</groupId>
        <artifactId>jinput</artifactId>
        <version>${jinput.version}</version>
        <classifier>natives-all</classifier>
    </dependency>
    <!-- lombok -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <scope>provided</scope>
    </dependency>
    <!-- test -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <excludes>
            <exclude>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
            </exclude>
          </excludes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.teamtter.mavennatives</groupId>
        <artifactId>nativedependencies-maven-plugin</artifactId>
        <version>${nativedependencies-maven-plugin.version}</version>
        <executions>
          <execution>
            <id>unpacknatives</id>
            <phase>generate-resources</phase>
            <goals>
              <goal>copy</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  </project>
